fluxengine-local-test/src/test/dsl/junit/InternalTestProjectの移行/error/20190322/rule/AC04CvCountDeficiencyRule.dsl
 test 1 s1:
   2018/11/10 00:12:34:
       adEvent:
         adGroupId: 04            # 広告ID
         accountId: 4000          # アカウントID
         media: "YSS"             # 媒体
         campaignId: 04           # キャンペーンID
       inspect:
            holderState.currentState == "over":